--- a/app/assets/stylesheets/todomvc.scss
+++ b/app/assets/stylesheets/todomvc.scss
@@ -3,8 +3,8 @@ body {
     line-height: 1.4em;
     background: #f5f5f5;
     color: #4d4d4d;
-    min-width: 230px;
-    max-width: 550px;
+    // min-width: 230px;
+    // max-width: 550px;
     margin: 0 auto;
     -webkit-font-smoothing: antialiased;
     -moz-font-smoothing: antialiased;
@@ -128,7 +128,7 @@ button, input[type="checkbox"] {
     display: none;
     position: absolute;
     top: 0;
-    right: 10px;
+    right: 45px;
     bottom: 0;
     width: 40px;
     height: 40px;
