--- a/app/views/tasks/_list.html.erb
+++ b/app/views/tasks/_list.html.erb
@@ -2,7 +2,8 @@
       <header id="header">
         <h1>todos</h1>
           
-          <%= hidden_field 'new_task',:cat_id, value: 1 %>
+          <% hidden_field 'new_task',:cat_id, value: 1 %>
+          <%=  %>
           <input id="new_task_name" name="new_task[name]" placeholder="Новая задача">
 
       </header>
