--- a/app/assets/stylesheets/todomvc.scss
+++ b/app/assets/stylesheets/todomvc.scss
@@ -139,6 +139,89 @@ button, input[type="checkbox"] {
     transition: color 0.2s ease-out;
 }
 
+#todo-list li .destroy:hover {
+    color: #af5b5e;
+}
+
+#todo-list li .destroy:after {
+    content: '×';
+}
+
+#todo-list li:hover .destroy {
+    display: block;
+}
+
+
+// #todo-list li .edit {
+//     display: none;
+//     position: absolute;
+//     top: 0;
+//     right: 90px;
+//     bottom: 0;
+//     width: 40px;
+//     height: 40px;
+//     margin: auto 0;
+//     font-size: 30px;
+//     color: #cc9a9a;
+//     margin-bottom: 11px;
+//     transition: color 0.2s ease-out;
+// }
+
+
+// #todo-list li .edit:after {
+//     content: '✎';
+// }
+
+// #todo-list li .edit {
+//     display: none;
+// }
+// #todo-list li .edit:hover {
+//     color: #af5b5e;
+//     display: block;
+// }
+#todo-list li.editing {
+    border-bottom: none;
+    padding: 0;
+}
+
+#todo-list li.editing .edit {
+    display: block;
+    width: 93%;
+    padding: 13px 17px 12px 17px;
+    margin: 0 0 0 43px;
+}
+
+#todo-list li.editing .view {
+    display: none;
+}
+
 #todo-list li .edit {
     display: none;
+}
+
+#todo-list li.editing:last-child {
+    margin-bottom: -1px;
+}
+
+#footer {
+    color: #777;
+    padding: 10px 15px;
+    height: 20px;
+    text-align: center;
+    border-top: 1px solid #e6e6e6;
+}
+
+#footer:before {
+    content: '';
+    position: absolute;
+    right: 0;
+    bottom: 0;
+    left: 0;
+    height: 50px;
+    overflow: hidden;
+    box-shadow: 0 1px 1px rgba(0, 0, 0, 0.2),
+                0 8px 0 -3px #f6f6f6,
+                0 9px 1px -3px rgba(0, 0, 0, 0.2),
+                0 16px 0 -6px #f6f6f6,
+                0 17px 2px -6px rgba(0, 0, 0, 0.2);
 }
