--- a/app/views/tasks/_list.html.erb
+++ b/app/views/tasks/_list.html.erb
@@ -1,13 +1,16 @@
-<%= chosen_src 'cat_id', Cat.all, 1,{class: 'schosen',add_name: 'new_task'} %>
+<div class="index_filter">
+  <%= chosen_src 'cat_id', Cat.all, @cat_id,{class: 'schosen'} %>
+</div>
+
       <header id="header">
         <h1>todos</h1>
           
-          <% hidden_field 'new_task',:cat_id, value: 1 %>
-          
+         
           <input id="new_task_name" name="new_task[name]" placeholder="Новая задача">
 
       </header>
 
+<% if @tasks %> 
 <ul id="todo-list" model="Task">
 <% @tasks.each do |task| %>
 <li data-id='<%= task.id %>'>
@@ -21,6 +24,7 @@
         </div>
         <input class="edit" name="upd<%= task.id %>[name]" value="<%= task.name %>">
       </li>
+<% end %>
 <% end %>
 </ul>
 </section>
