--- a/app/assets/stylesheets/tasks.scss
+++ b/app/assets/stylesheets/tasks.scss
@@ -27,7 +27,81 @@ a:hover .icon_user, .active .icon_user {background-position:-18px -18px; }
 .icon_edit {background-position:-69px -16px; }
 .icon_show {background-position:-212px -16px; margin: 0 4px 0 0 !important;}
 .icon_apply {background-position:-69px -33px; }
+.icon_remove {
+    background-position: -52px 0;
+    width: 15px;
+    height: 15px;
+}
+
+.tbl_a table td.tools .icon, table .icon {
+    margin: 0 10px 0 0;
+}
+
+td.edit_delete {width: 60px;}
+
 // .icon_apply:hover {background-position:-69px -48px;}
 .icon_cancel {background-position:-51px -33px; margin: 0 4px 0 0 !important;}
 .icon_cancel:hover {background-position:-51px 0px;}
 .app_cancel .icon{margin: 5px 9px 0 0 !important;}
+
+
+.itemAdd_form table{border-collapse:collapse; }
+.itemAdd_form table td{vertical-align: middle; padding-right: 15px; white-space:nowrap;}
+.itemAdd_form table td.caption, td label{font-weight: 500;}
+.itemAdd_form .inp {width: 354px; }
+.itemAdd_form .inp .txt, .search_area {width: 239px; float:left;}
+.itemAdd_form .inp .sub {float:right;}
+
+
+.tbl_a table tr:nth-child(even) td, table.tleads tr:nth-child(even) td {background: #fafafa;}
+.tbl_a table tr:hover td, table.tleads tr:hover:not(#new_item) td{ background-color: #f5f5f5;}
+.tleads, .tcalendar{ width: 100%; border-radius: 4px; -webkit-box-shadow: 0 1px 1px rgba(0,0,0,.05); box-shadow: 0 1px 1px rgba(0,0,0,.05);}
+.tleads thead{ border-radius: 0 3px 3px 0; }
+
+
+.tleads th{ padding: 8px;	border-bottom: 1px solid #ddd;}
+.tleads td{ border-top: 1px solid #ebebeb; padding: 8px;
+	&.editable,&.app_cancel{padding: 4px 4px;}
+}
+tr.editable td { padding: 3px 2px; vertical-align: middle;}
+tr.editable td.e_edit { padding: 3px 7px; }
+
+table {
+    border-collapse: collapse;
+    border-spacing: 0;
+}
+
+.tbl_a, .panel {
+    border: 1px solid #e5e5e5;
+    border-radius: 6px 6px 5px 5px;
+    position: relative;
+    line-height: 1.3;
+    background: white;
+}
+
+.tbl_a .head {
+    padding: 8px 12px;
+}
+
+.tbl_a .head, .panel-default .table-heading {
+    background: #f2f2f2;
+    padding: 8px;
+    font-size: 17px;
+    position: relative;
+    font-weight: 500;
+
+}
+
+.editable input[type="text"] {
+    height: 32px;
+    padding: 0 7px;
+    background: #fff;
+    border: 1px solid #e5e5e5;
+    border-top: 1px solid #d9d9d9;
+    box-shadow: inset 0 2px 0 #f2f2f2;
+    border-radius: 5px;
+    box-sizing: border-box;
+    -webkit-box-sizing: border-box;
+    -moz-box-sizing: border-box;
+    font-size: 13px;
+}
