--- a/app/assets/stylesheets/tasks.scss
+++ b/app/assets/stylesheets/tasks.scss
@@ -27,6 +27,7 @@ a:hover .icon_user, .active .icon_user {background-position:-18px -18px; }
 .icon_edit {background-position:-69px -16px; }
 .icon_show {background-position:-212px -16px; margin: 0 4px 0 0 !important;}
 .icon_apply {background-position:-69px -33px; }
+.icon_close {background-position: -52px -32px;}
 .icon_remove {
     background-position: -52px 0;
     width: 15px;
