--- a/app/views/options/edit.html.erb
+++ b/app/views/options/edit.html.erb
@@ -1,5 +1,5 @@
+<section id="todoapp">
 <div class="sidebar">
-
   <div id="accordion" class="menu_sb menu_sb_a" active=<%= get_active_option_page %> >
   <h3 class="first">Настройки:</h3><div><ul>
   <%= option_li("cats","Категории") %>
@@ -14,3 +14,4 @@
 
 
 </div>
+</section>
