--- a/app/assets/stylesheets/options.scss
+++ b/app/assets/stylesheets/options.scss
@@ -33,6 +33,20 @@ input[type="submit"], input[type="reset"], input[type="text"], input[type="tel"]
     box-shadow: inset 0 1px 3px rgba(0, 0, 0, 0.1);
 }
 
+input[type="text"] {
+    height: 32px;
+    padding: 0 7px;
+    background: #fff;
+    border: 1px solid #e5e5e5;
+    border-top: 1px solid #d9d9d9;
+    box-shadow: inset 0 2px 0 #f2f2f2;
+    border-radius: 5px;
+    box-sizing: border-box;
+    -webkit-box-sizing: border-box;
+    -moz-box-sizing: border-box;
+    font-size: 13px;
+}
+
 .txt, .form-control {
     height: 34px;
     padding: 3px 10px 0 10px;
