--- a/app/assets/stylesheets/scaffolds.scss
+++ b/app/assets/stylesheets/scaffolds.scss
@@ -37,6 +37,10 @@ div {
   }
 }
 
+div {
+    display: block;
+}
+
 #notice {
   color: green;
 }
@@ -70,4 +74,72 @@ div {
     font-size: 12px;
     list-style: square;
   }
+}
+
+.sep_15 {
+    height: 15px;
+}
+
+input[type="submit"]:focus, input[type="reset"]:focus, input[type="text"]:focus, input[type="tel"]:focus, input[type="url"]:focus, input[type="email"]:focus, input[type="search"]:focus, 
+input[type="password"]:focus, textarea:focus,.comment_area:focus, .txt:focus, #datepicker:focus, input[type="number"]:focus { 
+ outline:0;
+ border-color:rgba(255,132,17,0.8);
+-webkit-box-shadow: inset 0 1px 3px rgba(0,0,0,0.1),0 0 1px 3px rgba(255,232,215,0.6);
+-moz-box-shadow:inset 0 1px 3px rgba(0,0,0,0.1),0 0 1px 3px rgba(255,232,215,0.6);
+ box-shadow:inset 0 1px 3px rgba(0,0,0,0.1),0 0 1px 3px rgba(255,232,215,0.7);
+
+transition: border linear 0.3s,box-shadow linear 0.3s;
+}
+
+.tool_icons{ display: none; float: right; text-align: center; width: 45px; position: absolute; top: 7px; margin: 10px; right: 45px; }
+.tool_icons a{margin-right: 5px;}
+.tool_icons:hover {display: block !important;}
+.view:hover .tool_icons {display: block;}
+
+.editable input{width: 100% !important;}
+//.tool_icons span:hover{display: block;}
+
+.hl_a.bd {
+    border-bottom: 2px solid #e5e5e5;
+    padding: 0 0 16px 0;
+    margin: 0 0 30px 0;
+}
+
+.hl_a {
+    font-size: 17px;
+    color: #000;
+    line-height: 1.2;
+    margin: 0 0 14px 0;
+    font-weight: 500;
+}
+
+
+.modal-header {
+    min-height: 16px;
+}
+
+.close.text {
+    filter: alpha(opacity=20);
+    opacity: .4;
+    padding: 2px 0 0 4px;
+}
+
+button.close {
+    -webkit-appearance: none;
+    padding: 0;
+    cursor: pointer;
+    background: transparent;
+    border: 0;
+}
+
+.close {
+    float: right;
+    font-size: 13px;
+    line-height: 1.2;
+    color: #000;
+    text-shadow: 0 1px 0 #fff;
+}
+
+.modal-content {
+    padding: 40px;
 }
