--- a/app/assets/stylesheets/todomvc.scss
+++ b/app/assets/stylesheets/todomvc.scss
@@ -13,12 +13,19 @@ body {
 }
 
 #todoapp {
-    background: #fff;
+    //background: #fff;
     margin: 130px 0 40px 0;
     position: relative;
     // box-shadow: 0 2px 4px 0 rgba(0, 0, 0, 0.2), 0 25px 50px 0 rgba(0, 0, 0, 0.1);
+    //box-shadow: 2px 3px 5px 0 rgba(0, 0, 0, 0.2);
+}
+
+#todo_list{
+    background: #fff;
+    box-shadow: 0 2px 4px 0 rgba(0, 0, 0, 0.2), 0 25px 50px 0 rgba(0, 0, 0, 0.1);
     box-shadow: 2px 3px 5px 0 rgba(0, 0, 0, 0.2);
 }
+
 #todoapp h1 {
     position: absolute;
     top: -155px;
@@ -26,7 +33,7 @@ body {
     font-size: 100px;
     font-weight: 100;
     text-align: center;
-    color: rgba(175, 47, 47, 0.15);
+    color: #759e86;// rgba(175, 47, 47, 0.15);
     -webkit-text-rendering: optimizeLegibility;
     -moz-text-rendering: optimizeLegibility;
     text-rendering: optimizeLegibility;
@@ -46,13 +53,20 @@ body {
     outline: none;
     color: inherit;
     padding: 6px;
-    border: 1px solid #999;
-    box-shadow: inset 0 -1px 5px 0 rgba(0, 0, 0, 0.2);
+    //border: 1px solid #999;
+    border: 1px solid #e5e5e5;
+    //box-shadow: inset 0 -1px 5px 0 rgba(0, 0, 0, 0.2);
+    border-top: 1px solid #d9d9d9;
+    box-shadow: inset 0 2px 0 #f2f2f2;
+    border-radius: 5px;
+
     box-sizing: border-box;
     -webkit-font-smoothing: antialiased;
     -moz-font-smoothing: antialiased;
     font-smoothing: antialiased;
 }
+
+
 #new_task_name {
     padding: 16px 16px 16px 60px;
     border: none;
