--- a/app/views/tasks/_form.html.erb
+++ b/app/views/tasks/_form.html.erb
@@ -1,37 +1,17 @@
-<%= form_for(@task) do |f| %>
-  <% if @task.errors.any? %>
-    <div id="error_explanation">
-      <h2><%= pluralize(@task.errors.count, "error") %> prohibited this task from being saved:</h2>
+<%= simple_form_for(@task) do |f| %>
+	<div class="box_wrap box_wrap_1">
+		<div class="panel-left">
+			<table class="tbl_fc tbl_fc_1">
+			<tbody>
+			  <tr>
+			    <tr><td class="caption">Наименование:</td>
+						<td><div class="lbl"><%= f.input :name, label: false %></div></td></tr>
+			  </tr>
+			  </tbody>
+			</table>
 
-      <ul>
-      <% @task.errors.full_messages.each do |message| %>
-        <li><%= message %></li>
-      <% end %>
-      </ul>
-    </div>
-  <% end %>
 
-  <div class="field">
-    <%= f.label :name %><br>
-    <%= f.text_field :name %>
-  </div>
-  <div class="field">
-    <%= f.label :date %><br>
-    <%= f.datetime_select :date %>
-  </div>
-  <div class="field">
-    <%= f.label :personal %><br>
-    <%= f.check_box :personal %>
-  </div>
-  <div class="field">
-    <%= f.label :cat_id %><br>
-    <%= f.number_field :cat_id %>
-  </div>
-  <div class="field">
-    <%= f.label :done %><br>
-    <%= f.check_box :done %>
-  </div>
-  <div class="actions">
-    <%= f.submit %>
-  </div>
+
+<%= f.button :submit, value: 'Сохранить', :class => 'sub btn_a ' %>
+
 <% end %>
