--- a/app/views/options/edit.html.erb
+++ b/app/views/options/edit.html.erb
@@ -1,6 +1,13 @@
 <section id="todoapp">
 <div class="sidebar">
   <div id="accordion" class="menu_sb menu_sb_a" active=<%= get_active_option_page %> >
+
+ <h3 class="first">Настройки пользователей:</h3><div><ul>
+	<%= option_li("users","Пользователи") %>
+			<%= option_li("roles","Роли") %>
+  </ul></div>
+
+
   <h3 class="first">Настройки:</h3><div><ul>
   <%= option_li("cats","Категории") %>
   </ul></div>
