--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -17,7 +17,85 @@
  *= require_self
  */
 
-.container {
-    width: 1200px;
-    margin: 0 auto;
+.container {width: 1200px; margin: 0 auto; }
+label.inp_btn_label {padding: 0 0 0 25px; position: relative; float: left; }
+.itemAdd_form table td.caption, td label {font-weight: 500; }
+
+html, body, div, span, img, a, fieldset, form, label, legend, table, tbody, tfoot, thead, tr, th, td {
+    margin: 0;
+    padding: 0;
+    border: 0;
+    outline: 0;
+    font-size: 100%;
+    vertical-align: baseline;
+    background: transparent;
 }
+
+.inp_btn.checkbox.active, span.check_img.checked {
+    background-position: -87px -20px;
+}
+
+label.inp_btn_label .inp_btn {
+    position: absolute;
+    top: -1px;
+    left: 0;
+}
+
+.inp_btn.checkbox, span.check_img {
+    background: asset-url(pict01.png);
+    width: 18px;
+    height: 18px;
+    background-position: -87px 0;
+}
+
+.inp_btn.checkbox, span.check_img {
+    width: 18px;
+    height: 18px;
+    background-position: -87px 0;
+}
+
+.inp_btn, span.check_img {
+    display: inline-block;
+    background: asset-url(pict01.png) no-repeat -87px 0;
+    position: relative;
+    cursor: pointer;
+    overflow: hidden;
+    vertical-align: top;
+}
+.inp_btn.checkbox input {
+    position: absolute;
+    top: 0;
+    left: -50px;
+}
+.auth_form {
+    width: 430px;
+    margin: 0 auto;
+    margin-top: 130px;
+}
+table.tbl_fc {
+    border-collapse: collapse;
+    width: 100%;
+}
+table {
+    border-collapse: collapse;
+    border-spacing: 0;
+}
+table.tbl_fc td {vertical-align: top; padding-bottom: 10px; }
+.auth_form .forgot_pass {
+    float: right;
+    font-size: 12px;
+    position: relative;
+    top: 1px;
+    font-style: italic;
+}
+
+.grey {color: #aeaeae; }
+table.tbl_fc td.caption {
+    width: 115px;
+    padding-right: 15px;
+    padding-top: 7px;
+    text-align: right;
+    font-weight: 500;
+}
+
+.auth_form table.tbl_fc td.caption {width: 60px; }
