--- a/app/assets/stylesheets/options.scss
+++ b/app/assets/stylesheets/options.scss
@@ -12,10 +12,7 @@ span.btn_add{ height: 24px; width: 12px; padding: 0px 60px 7px 8px; margin-top: 
 .only_actual:hover {opacity: 0.8;}
 .btn_a.btn_reset {background: #c3c3c3;}
 
-.inp_w .txt, .inp_w, .inp_w input {
-    width: 100%;
-    vertical-align: top;
-}
+.inp_w .txt, .inp_w, .inp_w input {width: 100%; vertical-align: top; }
 
 input[type="submit"], input[type="reset"], input[type="text"], input[type="tel"], input[type="url"], input[type="email"], input[type="search"], input[type="password"], textarea {
     -webkit-appearance: none;
@@ -62,46 +59,18 @@ input[type="text"] {
 
 .items_box_head .inp_w{ width:105px; float: left; margin-right: 20px;}
 
-.body.sb_left .content, .container .content {
-    float: right;
-    width: 946px;
-}
+.body.sb_left .content, .container .content { float: right; width: 946px; }
 
-.sidebar {
-    float: left;
-    width: 214px;
-}
+.sidebar {float: left; width: 214px; }
 
 
-.ui-helper-reset {
-    margin: 0;
-    padding: 0;
-    border: 0;
-    outline: 0;
-    line-height: 1.3;
-    text-decoration: none;
-    font-size: 100%;
-    list-style: none;
-}
+.ui-helper-reset {margin: 0; padding: 0; border: 0; outline: 0; line-height: 1.3; text-decoration: none; font-size: 100%; list-style: none; }
 
-.menu_sb h3.ui-state-active {
-    border-radius: 5px 5px 0 0;
-}
+.menu_sb h3.ui-state-active {border-radius: 5px 5px 0 0; }
 
-.menu_sb h3.first {
-    margin-top: 0;
-}
-
-.menu_sb h3:hover, .menu_sb .ui-state-active {
-    cursor: pointer;
-    background: #f2f2f2;
-}
-
-.menu_sb h3 {
-    border-radius: 5px;
-    margin-top: 10px;
-}
-
+.menu_sb h3.first {margin-top: 0; }
+.menu_sb h3:hover, .menu_sb .ui-state-active {cursor: pointer; background: #f2f2f2; }
+.menu_sb h3 {border-radius: 5px; margin-top: 10px; }
 .menu_sb .head, .menu_sb h3 {
     border: 1px solid #f2f2f2;
     padding: 10px 10px 10px 20px;
