--- a/app/assets/stylesheets/todomvc.scss
+++ b/app/assets/stylesheets/todomvc.scss
@@ -3,8 +3,6 @@ body {
     line-height: 1.4em;
     background: #f5f5f5;
     color: #4d4d4d;
-    // min-width: 230px;
-    // max-width: 550px;
     margin: 0 auto;
     -webkit-font-smoothing: antialiased;
     -moz-font-smoothing: antialiased;
@@ -12,16 +10,8 @@ body {
     font-weight: 300;
 }
 
-#todoapp {
-    //background: #fff;
-    margin: 130px 0 40px 0;
-    position: relative;
-    // box-shadow: 0 2px 4px 0 rgba(0, 0, 0, 0.2), 0 25px 50px 0 rgba(0, 0, 0, 0.1);
-    //box-shadow: 2px 3px 5px 0 rgba(0, 0, 0, 0.2);
-}
-
-#todo_list{
-    background: #fff;
+#todoapp {margin: 130px 0 40px 0; position: relative; }
+#todo_list{ background: #fff;
     box-shadow: 0 2px 4px 0 rgba(0, 0, 0, 0.2), 0 25px 50px 0 rgba(0, 0, 0, 0.1);
     box-shadow: 2px 3px 5px 0 rgba(0, 0, 0, 0.2);
 }
@@ -38,8 +28,6 @@ body {
     -moz-text-rendering: optimizeLegibility;
     text-rendering: optimizeLegibility;
 }
-
-
 
 #new_task_name, .edit {
     position: relative;
@@ -67,35 +55,11 @@ body {
 }
 
 
-#new_task_name {
-    padding: 16px 16px 16px 60px;
-    border: none;
-    background: rgba(0, 0, 0, 0.003);
-    box-shadow: inset 0 -2px 1px rgba(0,0,0,0.03);
-}
-
-#todo-list {
-    margin: 0;
-    padding: 0;
-    list-style: none;
-}
-
-#todo-list li {
-    position: relative;
-    font-size: 24px;
-    border-bottom: 1px solid #ededed;
-}
-
-#todoapp input::-webkit-input-placeholder {
-	font-style: italic;
-	font-weight: 300;
-	color: #e6e6e6;
-}
-
-button, input[type="checkbox"] {
-    outline: none;
-}
-
+#new_task_name {padding: 16px 16px 16px 60px; border: none; background: rgba(0, 0, 0, 0.003); box-shadow: inset 0 -2px 1px rgba(0,0,0,0.03); }
+#todo-list {margin: 0; padding: 0; list-style: none; }
+#todo-list li {position: relative; font-size: 24px; border-bottom: 1px solid #ededed; }
+#todoapp input::-webkit-input-placeholder {font-style: italic; font-weight: 300; color: #e6e6e6; }
+button, input[type="checkbox"] {outline: none; }
 
 #todo-list li .toggle {
 	text-align: center;
@@ -111,10 +75,7 @@ button, input[type="checkbox"] {
 	appearance: none;
 }
 
-#todo-list li .toggle {
-    height: 40px;
-}
-
+#todo-list li .toggle {height: 40px; }
 #todo-list li .toggle:after {
 	content: url('data:image/svg+xml;utf8,<svg xmlns="http://www.w3.org/2000/svg" width="40" height="40" viewBox="-10 -18 100 135"><circle cx="50" cy="50" r="50" fill="none" stroke="#ededed" stroke-width="6"/></svg>');
 }
@@ -124,10 +85,7 @@ button, input[type="checkbox"] {
 }
 
 
-#toggle-all, #todo-list li .toggle {
-    background: none;
-}
-
+#toggle-all, #todo-list li .toggle {background: none; }
 #todo-list li label {
     white-space: pre-line;
     word-break: break-all;
@@ -153,78 +111,15 @@ button, input[type="checkbox"] {
     transition: color 0.2s ease-out;
 }
 
-#todo-list li .destroy:hover {
-    color: #af5b5e;
-}
-
-#todo-list li .destroy:after {
-    content: '×';
-}
-
-#todo-list li:hover .destroy {
-    display: block;
-}
-
-
-// #todo-list li .edit {
-//     display: none;
-//     position: absolute;
-//     top: 0;
-//     right: 90px;
-//     bottom: 0;
-//     width: 40px;
-//     height: 40px;
-//     margin: auto 0;
-//     font-size: 30px;
-//     color: #cc9a9a;
-//     margin-bottom: 11px;
-//     transition: color 0.2s ease-out;
-// }
-
-
-// #todo-list li .edit:after {
-//     content: '✎';
-// }
-
-// #todo-list li .edit {
-//     display: none;
-// }
-// #todo-list li .edit:hover {
-//     color: #af5b5e;
-//     display: block;
-// }
-#todo-list li.editing {
-    border-bottom: none;
-    padding: 0;
-}
-
-#todo-list li.editing .edit {
-    display: block;
-    width: 93%;
-    padding: 11px 13px 13px 16px;
-    margin: 0 0 0 43px;
-}
-
-#todo-list li.editing .view {
-    display: none;
-}
-
-#todo-list li .edit {
-    display: none;
-}
-
-#todo-list li.editing:last-child {
-    margin-bottom: -1px;
-}
-
-#footer {
-    color: #777;
-    padding: 10px 15px;
-    height: 20px;
-    text-align: center;
-    border-top: 1px solid #e6e6e6;
-}
-
+#todo-list li .destroy:hover {color: #af5b5e; }
+#todo-list li .destroy:after {content: '×'; }
+#todo-list li:hover .destroy {display: block; }
+#todo-list li.editing {border-bottom: none; padding: 0; }
+#todo-list li.editing .edit {display: block; width: 93%; padding: 11px 13px 13px 16px; margin: 0 0 0 43px; }
+#todo-list li.editing .view {display: none; }
+#todo-list li .edit {display: none; }
+#todo-list li.editing:last-child {margin-bottom: -1px; }
+#footer {color: #777; padding: 10px 15px; height: 20px; text-align: center; border-top: 1px solid #e6e6e6; }
 #footer:before {
     content: '';
     position: absolute;
