--- a/app/views/tasks/_form.html.erb
+++ b/app/views/tasks/_form.html.erb
@@ -5,7 +5,7 @@
 			<tbody>
 			  <tr>
 			    <tr><td class="caption">Наименование:</td>
-						<td><div class="lbl"><%= f.input :name, label: false %></div></td></tr>
+						<td width="300px"><div class="lbl fullwidth"><%= f.input :name, label: false %></div></td></tr>
 			  </tr>
 			  </tbody>
 			</table>
