--- a/app/assets/stylesheets/options.scss
+++ b/app/assets/stylesheets/options.scss
@@ -30,7 +30,7 @@ input[type="submit"], input[type="reset"], input[type="text"], input[type="tel"]
     box-shadow: inset 0 1px 3px rgba(0, 0, 0, 0.1);
 }
 
-input[type="text"] {
+input[type="text"], textarea {
     height: 32px;
     padding: 0 7px;
     background: #fff;
