--- a/app/views/tasks/_list.html.erb
+++ b/app/views/tasks/_list.html.erb
@@ -27,7 +27,8 @@
           </span>
           <!-- <button class="edit"></button>
           <button class="destroy"></button> -->
-          <span class="letter" color=<%= task.cat.color %>><%= task.cat_name_a %></span>
+          <!-- <span class="letter" color=<%= task.cat.color %>> <%= link_to task.cat_name_a,'?cat_id='+task.cat.id.to_s %> </span> -->
+          <%= link_to task.cat_name_a,'?cat_id='+task.cat.id.to_s, {class: 'letter', color: task.cat.color} %>
         </div>
         <input class="edit" name="upd<%= task.id %>[name]" value="<%= task.name %>">
       </li>
