--- a/app/assets/stylesheets/scaffolds.scss
+++ b/app/assets/stylesheets/scaffolds.scss
@@ -90,7 +90,7 @@ table.tbl_fc td.caption { padding-right: 15px; text-align: right; font-weight: b
 .inp_btn.checkbox input {position: absolute; top: 0; left: -50px; } 
 .auth_form {width: 430px; margin: 0 auto; margin-top: 130px; }
 .menu_main ul, .submenu ul, .items_box_head ul {margin: 0 0 0 0; padding: 0 0 0 0; list-style: none; overflow: hidden; }
-.menu_main {height: 44px; background: #f1f1f1 image-url("bg1_1.png") no-repeat 0 0; border-radius: 5px; position: relative; margin-bottom: 40px; }
+.menu_main {height: 44px;  position: relative; margin-bottom: 40px; }
 .menu_main ul li, .submenu ul li, .items_box_head ul li {margin: 0 0 0 0; padding: 0 0 0 0; background: none; float: left; }
 .menu_main ul li a {
     display: inline-block;
@@ -117,3 +117,11 @@ table.tbl_fc td.caption { padding-right: 15px; text-align: right; font-weight: b
 .li-right, .right {float: right !important; margin-top: 0 !important; }
 
 .box_wrap:after {content: ' '; clear: both; display: block; width: 0; height: 0; overflow: hidden; font-size: 0; }
+
+
+#main_container{box-sizing: border-box; display: block;}
+#main_container:before{
+    display: table;
+    content: " ";
+    
+}
